--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+    <header class="header">
+        
+    </header>
+    <main class="main">proletarians of all countries unite</main>
+    <footer class="footer"></footer>
 </body>
 
 </html>
