--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,19 @@
 
 <body>
     <header class="header">
-        
+        <div class="wrapper">
+            <a href="#" class="header__logo">
+                <img src="img/logo.svg" alt="Header logo is here">
+            </a>
+            <div class="header__menu">
+                <nav class="header__nav">
+                    <a href="#">Чем занимаемся</a>
+                    <a href="#">Команда</a>
+                    <a href="#">Команда</a>
+                </nav>
+                <button type="button" class="button header__button">Оставить заявку</button>
+            </div>
+        </div>
     </header>
     <main class="main">proletarians of all countries unite</main>
     <footer class="footer"></footer>
