--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <div class="wrapper">
+        <div class="header__wrap">
             <a href="#" class="header__logo">
                 <img src="img/logo.svg" alt="Header logo is here">
             </a>
@@ -26,7 +26,36 @@
             </div>
         </div>
     </header>
-    <main class="main">proletarians of all countries unite</main>
+    <main class="main">
+        <section class="main-display">
+            <div class="container">
+                <h1 class="main-display__header">Собираем игровой ПК
+                    под ваш бюджет</h1>
+                <div class="timer main-display__timer">
+                    <div class="timer__item">
+                        <div class="timer__count">18</div>
+                        <div class="timer__text">Дней</div>
+                    </div>
+                    <div class="timer__item">
+                        <div class="timer__count">18</div>
+                        <div class="timer__text">Часов</div>
+                    </div>
+                    <div class="timer__item">
+                        <div class="timer__count">18</div>
+                        <div class="timer__text">Минут</div>
+                    </div>
+                    <div class="timer__item">
+                        <div class="timer__count">18</div>
+                        <div class="timer__text">Секунд</div>
+                    </div>  
+                </div>
+                <button type="button" class="button main-display__button">Оставить заявлку</button>
+            </div>
+            <div class="main-display__background">
+                <img src="img/main-screen__bgc.jpg" alt="main screen is here">
+            </div>
+        </section>
+    </main>
     <footer class="footer"></footer>
 </body>
 
