add section work heder section process
Блок ворк завершен, но нужен фикс картинки
хедер для блока процесс набран без css

--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Rubik:wght@400;700&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -53,6 +57,33 @@
             </div>
             <div class="main-display__background">
                 <img src="img/main-screen__bgc.jpg" alt="main screen is here">
+            </div>
+        </section>
+
+        <section class="work">
+            <div class="container">
+                <div class="work__wrap">
+                    <div class="work__img">
+                        <img src="img/work__img.jpg" alt="">
+                    </div>
+                    <div class="work__text">
+                        <h2 class="work__header">Чем мы занимаемся</h2>
+                        <p class="work__describtion">Помогаем сэкономить до 40% стоимости игрового компьютера без потери производительности. Подбираем мощные детали
+                        компьютера, заказываем у своих поставщиков или напрямую у производителей, чтобы сэкономить ваши деньги. Собираем мощный
+                        компьютер, на котором можно играть в любые современные игры и заниматься работой.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="process">
+            <div class="container">
+                <div class="process__title"></div>
+                <div class="process__img">
+                    <img src="img/process__img.svg" alt="process img is here">
+                </div>
+                <h2 class="process__header">Процесс работы</h2>
+                
             </div>
         </section>
     </main>
