--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,7 @@
                     <div class="timer__item">
                         <div class="timer__count">18</div>
                         <div class="timer__text">Секунд</div>
-                    </div>  
+                    </div>
                 </div>
                 <button type="button" class="button main-display__button">Оставить заявлку</button>
             </div>
@@ -64,13 +64,15 @@
             <div class="container">
                 <div class="work__wrap">
                     <div class="work__img">
-                        <img src="img/work__img.jpg" alt="">
+                        <img src="img/work__img.png" alt="">
                     </div>
                     <div class="work__text">
                         <h2 class="work__header">Чем мы занимаемся</h2>
-                        <p class="work__describtion">Помогаем сэкономить до 40% стоимости игрового компьютера без потери производительности. Подбираем мощные детали
-                        компьютера, заказываем у своих поставщиков или напрямую у производителей, чтобы сэкономить ваши деньги. Собираем мощный
-                        компьютер, на котором можно играть в любые современные игры и заниматься работой.</p>
+                        <p class="work__describtion">Помогаем сэкономить до 40% стоимости игрового компьютера без потери
+                            производительности. Подбираем мощные детали
+                            компьютера, заказываем у своих поставщиков или напрямую у производителей, чтобы сэкономить
+                            ваши деньги. Собираем мощный
+                            компьютер, на котором можно играть в любые современные игры и заниматься работой.</p>
                     </div>
                 </div>
             </div>
@@ -83,8 +85,8 @@
                     <img src="img/process__img.svg" alt="process img is here">
                 </div>
                 <h2 class="process__header">Процесс работы</h2>
-                
-            </div>
+
+            </div>__
         </section>
     </main>
     <footer class="footer"></footer>
