--- a/source/index.html
+++ b/source/index.html
@@ -80,13 +80,13 @@
 
         <section class="process">
             <div class="container">
-                <div class="process__title"></div>
-                <div class="process__img">
-                    <img src="img/process__img.svg" alt="process img is here">
+                <div class="process__title">
+                        <div class="process__img">
+                            <img src="img/process__img.svg" alt="process img is here">
+                        </div>
+                        <h2 class="process__header">Процесс работы</h2>
                 </div>
-                <h2 class="process__header">Процесс работы</h2>
-
-            </div>__
+            </div>
         </section>
     </main>
     <footer class="footer"></footer>
