--- a/source/index.html
+++ b/source/index.html
@@ -86,6 +86,9 @@
                         </div>
                         <h2 class="process__header">Процесс работы</h2>
                 </div>
+                <div class="process__description">
+                    <p>Подробно рассказываем о том, как происходит сборка, от заявки до выдачи вашего заказа</p>
+                </div>
             </div>
         </section>
     </main>
