--- a/source/index.html
+++ b/source/index.html
@@ -81,13 +81,44 @@
         <section class="process">
             <div class="container">
                 <div class="process__title">
-                        <div class="process__img">
-                            <img src="img/process__img.svg" alt="process img is here">
-                        </div>
-                        <h2 class="process__header">Процесс работы</h2>
+                    <div class="process__img">
+                        <img src="img/process__img.svg" alt="process img is here">
+                    </div>
+                    <h2 class="process__header">Процесс работы</h2>
                 </div>
                 <div class="process__description">
                     <p>Подробно рассказываем о том, как происходит сборка, от заявки до выдачи вашего заказа</p>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="card">
+                    <h3 class="card__header">Заявка</h3>
+                    <div class="card__line"></div>
+                    <div class="card__description">Мы получаем вашу заявку, связываемся с вами для уточнения деталей,
+                        чтобы понять ваши
+                        ожидания от будущего компьютера.</div>
+                </div>
+                <div class="card">
+                    <h3 class="card__header">Подбор</h3>
+                    <div class="card__line"></div>
+                    <div class="card__description">После оплаты подбираем комплектующие, которые дадут максимальную
+                        производительность. Заказываем их напрямую у
+                        поставщиков.</div>
+                </div>
+                <div class="card">
+                    <h3 class="card__header">Сборка</h3>
+                    <div class="card__line"></div>
+                    <div class="card__description">Собираем компьютер, проводим стартовую диагностику, устанавливаем
+                        операционную систему и необходимые драйверы для
+                        работы.</div>
+                    <div class="card">
+                        <h3 class="card__header">Выдача</h3>
+                        <div class="card__line"></div>
+                        <div class="card__description">Отдаём компьютер вам в назначенный срок, проводим вместе
+                            тестирование, подписываем документы о выполнении работы и
+                            гарантии.</div>
+                    </div>
                 </div>
             </div>
         </section>
