--- a/source/index.html
+++ b/source/index.html
@@ -91,27 +91,29 @@
                 </div>
             </div>
 
-            <div class="container">
-                <div class="card">
-                    <h3 class="card__header">Заявка</h3>
-                    <div class="card__line"></div>
-                    <div class="card__description">Мы получаем вашу заявку, связываемся с вами для уточнения деталей,
-                        чтобы понять ваши
-                        ожидания от будущего компьютера.</div>
-                </div>
-                <div class="card">
-                    <h3 class="card__header">Подбор</h3>
-                    <div class="card__line"></div>
-                    <div class="card__description">После оплаты подбираем комплектующие, которые дадут максимальную
-                        производительность. Заказываем их напрямую у
-                        поставщиков.</div>
-                </div>
-                <div class="card">
-                    <h3 class="card__header">Сборка</h3>
-                    <div class="card__line"></div>
-                    <div class="card__description">Собираем компьютер, проводим стартовую диагностику, устанавливаем
-                        операционную систему и необходимые драйверы для
-                        работы.</div>
+            <div class="container ">
+                <div class="container__cards">
+                    <div class="card">
+                        <h3 class="card__header">Заявка</h3>
+                        <div class="card__line"></div>
+                        <div class="card__description">Мы получаем вашу заявку, связываемся с вами для уточнения деталей,
+                            чтобы понять ваши
+                            ожидания от будущего компьютера.</div>
+                    </div>
+                    <div class="card">
+                        <h3 class="card__header">Подбор</h3>
+                        <div class="card__line"></div>
+                        <div class="card__description">После оплаты подбираем комплектующие, которые дадут максимальную
+                            производительность. Заказываем их напрямую у
+                            поставщиков.</div>
+                    </div>
+                    <div class="card">
+                        <h3 class="card__header">Сборка</h3>
+                        <div class="card__line"></div>
+                        <div class="card__description">Собираем компьютер, проводим стартовую диагностику, устанавливаем
+                            операционную систему и необходимые драйверы для
+                            работы.</div>
+                    </div>       
                     <div class="card">
                         <h3 class="card__header">Выдача</h3>
                         <div class="card__line"></div>
