--- a/source/index.html
+++ b/source/index.html
@@ -124,6 +124,42 @@
                 </div>
             </div>
         </section>
+        
+        <section class="team">
+            <div class="team__header">
+                <div class="team__header-imge">
+                    <img src="img/team__header-image.svg" alt="team header-image is here">
+                </div>
+                <h3 class="team__header-text">Наша команда</h3>
+            </div>
+            <div class="team__cards">
+                <div class="team__card">
+                    <div class="card__image">
+                        <img src="img/team__Evgeny__Petrov.jpg" alt="team Evgeny Petrov foto is here">
+                    </div>
+                    <h3 class="card__name">Евгений Петров</h3>
+                    <div class="card__description">Специалист по видеокартам</div>
+                    <button class="button__biography">Биография</button>
+                </div>
+                <div class="team__card">
+                    <div class="card__image">
+                        <img src="img/team__aAlecsey__Kozlov.jpg" alt="team Alecsey Lozkov is here">
+                    </div>
+                    <h3 class="card__name">Алексей Козлов</h3>
+                    <div class="card__description">Специалист по видеокартам</div>
+                    <button class="button__biography">Биография</button>
+                </div>
+                <div class="team__card">
+                    <div class="card__image">
+                        <img src="img/team__Dmitry__Ivanov.jpg" alt="team Dmitry ivanov foto is here">
+                    </div>
+                    <h3 class="card__name">Дмитрий Иванов</h3>
+                    <div class="card__description">Специалист по видеокартам</div>
+                    <button class="button__biography">Биография</button>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer class="footer"></footer>
 </body>
