--- a/source/index.html
+++ b/source/index.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="team__card">
                     <div class="card__image">
-                        <img src="img/team__Dmitry__Ivanov.jpg" alt="team Dmitry ivanov foto is here">
+                        <img src="img/Ellipse 2.jpg" alt="team Dmitry ivanov foto is here">
                     </div>
                     <h3 class="card__name">Дмитрий Иванов</h3>
                     <div class="card__description">Специалист по видеокартам</div>
