--- a/source/index.html
+++ b/source/index.html
@@ -96,7 +96,8 @@
                     <div class="card">
                         <h3 class="card__header">Заявка</h3>
                         <div class="card__line"></div>
-                        <div class="card__description">Мы получаем вашу заявку, связываемся с вами для уточнения деталей,
+                        <div class="card__description">Мы получаем вашу заявку, связываемся с вами для уточнения
+                            деталей,
                             чтобы понять ваши
                             ожидания от будущего компьютера.</div>
                     </div>
@@ -113,7 +114,7 @@
                         <div class="card__description">Собираем компьютер, проводим стартовую диагностику, устанавливаем
                             операционную систему и необходимые драйверы для
                             работы.</div>
-                    </div>       
+                    </div>
                     <div class="card">
                         <h3 class="card__header">Выдача</h3>
                         <div class="card__line"></div>
@@ -124,10 +125,10 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="team">
             <div class="team__header">
-                <div class="team__header-imge">
+                <div class="team__header-image">
                     <img src="img/team__header-image.svg" alt="team header-image is here">
                 </div>
                 <h3 class="team__header-text">Наша команда</h3>
@@ -151,7 +152,7 @@
                 </div>
                 <div class="team__card">
                     <div class="card__image">
-                        <img src="img/Ellipse 2.jpg" alt="team Dmitry ivanov foto is here">
+                        <img src="img/team__Dmitry__.Ivanov.jpg" alt="team Dmitry ivanov foto is here">
                     </div>
                     <h3 class="card__name">Дмитрий Иванов</h3>
                     <div class="card__description">Специалист по видеокартам</div>
