add team block fix
Выставил отступы для блока.
Добавлены стили CSS
Одинаковые стили для бока process & team исправлены на различные.

--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
                         <img src="img/team__Evgeny__Petrov.jpg" alt="team Evgeny Petrov foto is here">
                     </div>
                     <h3 class="card__name">Евгений Петров</h3>
-                    <div class="card__description">Специалист по видеокартам</div>
+                    <div class="card__description_team">Специалист по видеокартам</div>
                     <button class="button__biography">Биография</button>
                 </div>
                 <div class="team__card">
@@ -147,7 +147,7 @@
                         <img src="img/team__aAlecsey__Kozlov.jpg" alt="team Alecsey Lozkov is here">
                     </div>
                     <h3 class="card__name">Алексей Козлов</h3>
-                    <div class="card__description">Специалист по видеокартам</div>
+                    <div class="card__description_team">Специалист по видеокартам</div>
                     <button class="button__biography">Биография</button>
                 </div>
                 <div class="team__card">
@@ -155,7 +155,7 @@
                         <img src="img/team__Dmitry__.Ivanov.jpg" alt="team Dmitry ivanov foto is here">
                     </div>
                     <h3 class="card__name">Дмитрий Иванов</h3>
-                    <div class="card__description">Специалист по видеокартам</div>
+                    <div class="card__description_team">Специалист по видеокартам</div>
                     <button class="button__biography">Биография</button>
                 </div>
 
