--- a/source/index.html
+++ b/source/index.html
@@ -161,6 +161,28 @@
 
             </div>
         </section>
+
+        <section class="assembly">
+            <div class="assembly__wrapper">
+                <h2 class="asembly__header">Закажите свою уникальную сборку</h2>
+                <div class="assembly__description">Мы свяжемся с вами, чтобы уточнить детали заказа</div>
+                <button class="button assembly__button">Оставить заявку</button>
+                <div class="assembly__socials">
+                    <div class="assembly__item">
+                        <img src="./img/socials/vk.svg" alt="VK">
+                    </div>
+                    <div class="assembly__item">
+                        <img src="./img/socials/Facebook.svg" alt="facebook">
+                    </div>    
+                    <div class="assembly__item">
+                        <img src="./img/socials/youtube.svg" alt="youtube">
+                    </div>
+                    <div class="assembly__item">
+                        <img src="./img/socials/instagram.svg" alt="insta">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer"></footer>
 </body>
